--- a/20180419_WebApiSchulung/Api.AdventureWorks2012.Productmanagement/Api.AdventureWorks2012.Productmanagement.csproj
+++ b/20180419_WebApiSchulung/Api.AdventureWorks2012.Productmanagement/Api.AdventureWorks2012.Productmanagement.csproj
@@ -111,6 +111,7 @@
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\ProductViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
