--- a/20180419_WebApiSchulung/Api.AdventureWorks2012.Productmanagement/Api.AdventureWorks2012.Productmanagement.csproj
+++ b/20180419_WebApiSchulung/Api.AdventureWorks2012.Productmanagement/Api.AdventureWorks2012.Productmanagement.csproj
@@ -109,6 +109,7 @@
     <Compile Include="App_Start\SwaggerConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\ProductController.cs" />
+    <Compile Include="Filters\CustomExceptionFilterAttribute.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
