--- a/20180419_WebApiSchulung/Api.AdventureWorks2012.Productmanagement/Api.AdventureWorks2012.Productmanagement.csproj
+++ b/20180419_WebApiSchulung/Api.AdventureWorks2012.Productmanagement/Api.AdventureWorks2012.Productmanagement.csproj
@@ -123,6 +123,9 @@
     </Compile>
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\ProductDbContext.cs" />
+    <Compile Include="Plugins\Cacheability.cs" />
+    <Compile Include="Plugins\CachedResult.cs" />
+    <Compile Include="Plugins\HttpActionResultExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\ProductViewModel.cs" />
   </ItemGroup>
