--- a/20180419_WebApiSchulung/Api.AdventureWorks2012.Productmanagement/packages.config
+++ b/20180419_WebApiSchulung/Api.AdventureWorks2012.Productmanagement/packages.config
@@ -14,10 +14,13 @@
   <package id="Microsoft.AspNet.WebApi.Core.de" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.HelpPage" version="5.2.4" targetFramework="net461" />
+  <package id="Microsoft.AspNet.WebApi.OData" version="5.3.1" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebApi.WebHost.de" version="5.2.4" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.4" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.8" targetFramework="net461" />
+  <package id="Microsoft.Data.Edm" version="5.6.0" targetFramework="net461" />
+  <package id="Microsoft.Data.OData" version="5.6.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.4.0" targetFramework="net461" developmentDependency="true" />
@@ -38,6 +41,7 @@
   <package id="System.Reflection" version="4.1.0" targetFramework="net461" />
   <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net461" />
   <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net461" />
+  <package id="System.Spatial" version="5.6.0" targetFramework="net461" />
   <package id="System.Threading" version="4.0.11" targetFramework="net461" />
   <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
